# SalaryPaymentSystem

./: AddEmployeeTransaction.cpp  AddEmployeeTransaction.h  AddSalariedEmployee.cpp  AddSalariedEmployee.h  CMakeLists.txt  Employee.cpp  Employee.h  HoldMethod.cpp  HoldMethod.h  MonthlySchedule.cpp  MonthlySchedule.h  PaymentClassification.cpp  PaymentClassification.h  PaymentMethod.cpp  PaymentMethod.h  PaymentSchedule.cpp  PaymentSchedule.h  PaymentTest.cpp  PaymentTest.h  PayrollDataBase.cpp  PayrollDataBase.h  SalariedClassification.cpp  SalariedClassification.h  Trasation.h
